Fix German word overflow.

--- a/src/styles/start_screen.less
+++ b/src/styles/start_screen.less
@@ -33,19 +33,21 @@
     cursor: pointer;
     box-shadow: inset 0 0 0px 1px #333;
     height: 90px;
-    line-height: 130px;
+    line-height: 28px;
     border-radius: 10px;
     color: #eee;
     text-shadow: 0 0 2px black, 0 2px 1px black;
     padding-left: 17px;
     width: 369px;
     height: 90px;
-    display: block;
+    display: flex;
     margin-bottom: 5px;
     font-size: 26px;
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 1px;
+    padding-bottom: 15px;
+    flex-direction: column-reverse;
 
     &:hover, &:visited, &:active, &:focus {
         color: #eee;
